--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@iconify/svelte": "^3.1.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"photoswipe": "^5.3.7",
 		"sass": "^1.58.3",
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
