--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"photoswipe": "^5.3.7",
 		"sass": "^1.58.3",
 		"svelte": "^3.54.0",
+		"swiper": "^9.2.4",
 		"vite": "^4.0.0"
 	},
 	"type": "module"
